kube/app/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-app-template-core-backend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-core-backend-deployment
  namespace: ns-app-template-core-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-template-core-backend
  template:
    metadata:
      labels:
        app: app-template-core-backend
    spec:
      containers:
        - name: app-core-backend-container
          image: ghcr.io/blrvio/template-core-backend-nodejs:development
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: app-core-backend-service
  namespace: ns-app-template-core-backend
spec:
  selector:
    app: app-template-core-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-core-backend-ingress
  namespace: ns-app-template-core-backend
spec:
  defaultBackend:
    service:
      name: app-core-backend-service
      port:
        number: 80
